# bookmark_util

./: .gitignore  pyproject.toml
bookmark_util/: bookmark_utilities.ipynb  main.py
bookmark_util/core/: config.py  db.py
bookmark_util/core/database/: sqla_connection_models.py  sqla_utils.py
bookmark_util/domain/models/: bookmark_models.py
bookmark_util/domain/schemas/: bookmark_schemas.py
bookmark_util/utils/: msgpack_utils.py  request_utils.py  validators.py
